Fix x-axis overflow, improve VoLTE fix wording, add changelog dates

--- a/public/realme/styles.less
+++ b/public/realme/styles.less
@@ -44,18 +44,12 @@ ul.gg-c-list {
   }
 }
 
-code,
-pre {
-  font-family: "Consolas", monospace;
-}
-
 code {
-  display: inline-block;
-  padding: 2px 6px !important;
-}
-
-pre {
   display: block;
+  padding: 2px 6px !important;
+  font-family: "Consolas", monospace;
+  width: max-content;
+  max-width: 100%;
 }
 
 .version {
